Optimized Code Removed SID form share URL

--- a/config/services.yml
+++ b/config/services.yml
@@ -4,5 +4,7 @@ services:
         arguments:
             - @config
             - @template
+            - @user
+            - %core.root_path%
         tags:
             - { name: event.listener }
