--- a/config/services.yml
+++ b/config/services.yml
@@ -5,6 +5,7 @@ services:
             - @config
             - @template
             - @user
+            - @request
             - %core.root_path%
         tags:
             - { name: event.listener }
