--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
 	"name": "tas2580/socialbuttons",
 	"type": "phpbb-extension",
-	"description": "Displays social media buttons at the bottom of the current topic's page.",
+	"description": "Displays social media buttons at topic pages and at the forum index. The number of shares is retrieved from the server to protect the privacy.",
 	"homepage": "https://tas2580.net/downloads/download-7.html",
-	"version": "0.5.1",
+	"version": "1.0.0-RC1",
 	"keywords": ["phpbb", "extension", "social", "topics"],
 	"license": "GPL-2.0",
 	"authors": [
