--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
 	"name": "tas2580/socialbuttons",
 	"type": "phpbb-extension",
-	"description": "Displays social media buttons at the bottom of the current topic's page.",
+	"description": "Displays social media buttons at topic pages and at the forum index. The number of shares is retrieved from the server to protect the privacy.",
 	"homepage": "https://tas2580.net/downloads/download-7.html",
-	"version": "0.5.0",
+	"version": "1.0.0-RC1",
 	"keywords": ["phpbb", "extension", "social", "topics"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -24,7 +24,7 @@
 	"extra": {
 		"display-name": "tas2580 Social Media Buttons",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*@dev"
+			"phpbb/phpbb": ">=3.1.4-RC1,<3.2.*@dev"
 		},
 		"version-check": {
 			"host": "tas2580.net",
