--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ branches:
 
 install:
   - composer install --dev --no-interaction --prefer-source
-  - travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
+  - travis_wait travis/prepare-phpbb.sh $EXTNAME $PHPBB_BRANCH
   - cd ../../phpBB3
   - travis/prepare-extension.sh $EXTNAME $PHPBB_BRANCH
   - travis/setup-phpbb.sh $DB $TRAVIS_PHP_VERSION
