--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
 	"name": "tas2580/socialbuttons",
 	"type": "phpbb-extension",
 	"description": "Displays social media buttons at topic pages and at the forum index. The number of shares is retrieved from the server to protect the privacy.",
-	"homepage": "https://tas2580.net/downloads/download-7.html",
+	"homepage": "https://tas2580.net/downloads/phpbb-social-media-buttons/",
 	"version": "1.0.0-RC2",
-	"keywords": ["phpbb", "extension", "social", "topics"],
+	"keywords": ["phpbb", "extension", "social", "topics","facebook","twitter","google","linkedin","socialmedia"],
 	"license": "GPL-2.0",
 	"authors": [
 		{
@@ -33,4 +33,3 @@
 		}
 	}
 }
-
