--- a/config/services.yml
+++ b/config/services.yml
@@ -6,7 +6,7 @@ services:
             - @template
             - @user
             - @request
+            - @cache.driver
             - %core.root_path%
         tags:
             - { name: event.listener }
-            
