--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,11 @@
 		"display-name": "tas2580 Social Media Buttons",
 		"soft-require": {
 			"phpbb/phpbb": ">=3.1.4-RC1,<3.2.*@dev"
+		},
+		"version-check": {
+			"host": "phpbb-versionscheck.cf",
+			"directory": "/tas2580/socialbuttons/master",
+			"filename": "version-check.json"
 		}
 	}
 }
